--- a/k8/base/matcher-deployment.yaml
+++ b/k8/base/matcher-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: matcher
   namespace: atra
-
+  
 spec:
   replicas: 1
   selector:
@@ -22,3 +22,20 @@ spec:
         env:
         - name: BIND_ADDRESS
           value: "0.0.0.0:50051"
+        readinessProbe:
+          exec:
+            command: ["nc", "-z", "localhost", "50051"]
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          exec:
+            command: ["nc", "-z", "localhost", "50051"]
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
