--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
     paths-ignore:
       - '**.md'
       - 'doc/**'
+      - '.gitignore'
+      - '.github/**'
   pull_request:
     types: [opened, synchronize]
   workflow_dispatch:
