--- a/helm/atra/templates/gateway-service.yaml
+++ b/helm/atra/templates/gateway-service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gateway
-  namespace: atra
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: gateway
   ports:
-  - port: 50052
-    targetPort: 50052
+  - port: {{ .Values.gateway.port }}
+    targetPort: {{ .Values.gateway.port }}
   type: ClusterIP
