--- a/helm/atra/templates/matcher-service.yaml
+++ b/helm/atra/templates/matcher-service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: matcher
-  namespace: atra
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: matcher
   ports:
-  - port: 50051
-    targetPort: 50051
+  - port: {{ .Values.matcher.port }}
+    targetPort: {{ .Values.matcher.port }}
   type: ClusterIP
