--- a/.github/workflows/generate-manifests.yml
+++ b/.github/workflows/generate-manifests.yml
@@ -9,7 +9,10 @@ on:
     paths:
       - 'helm/**'
   workflow_dispatch:
-
+    
+permissions:
+  contents: write
+  
 jobs:
   generate-manifests:
     runs-on: ubuntu-latest
@@ -57,7 +60,7 @@ jobs:
         git config --local user.name "Atramentar"
         git add k8/
         git diff --staged --quiet || (
-          BRANCH_NAME=$(echo $GITHUB_REF | sed 's!refs/heads/!!')      
+          PR_BRANCH="refs/heads/$GITHUB_HEAD_REF"
           git commit -m "Auto-generate Kubernetes manifests from Helm charts [skip ci]"
-          git push origin HEAD:$BRANCH_NAME
+          git push origin HEAD:$PR_BRANCH
         )
